0.001
  - Inisial barely working version
