@@ -1,3 +1,6 @@
+  - Add timeouts to tests to avoid hangs when they fail.
+  - Fix for latest version of Message::Passing
+
 0.001
-  - Inisial barely working version
+  - Initial barely working version
 
